<resources>
    <string name="app_name">DvsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_ourtechnologies">Our Technologies</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_ourteam">Our Team</string>
    <string name="menu_services">Services</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_enquiry">Enquiry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mission">To provide a vibrant environment, compatible to a comprehensive and innovative learning for our students, to help them achieve a harmonious development. To achieve higher quality in the academic standards and to promote excellence in every activity we undertake To provide an accessible and a cost effective quality education for ever one. To help students develop latest professional skills and intellectual abilities infused with ethical and moral principles and a global perspective To promote a dynamic intellectual environment, that nurtures cultural, social and ethnic diversity, allows for a free expression, develops personal integrity and to promote mutual respect for everyone in the society. To meet the serious challenges coming from anthropogenic nature of global warming. To promote and undertake initiatives which encourage a healthy living environment for everyone.
</string>
    <string name="vision">To become a National Centre of excellence in the diversified fields of education by imparting state of the technical education, training and innovative research relevant to present and future requirements. To strive to develop an innovative centre of learning, designed to develop a blend of solutions after proper research into academic learning and put it in to practice, through a creative use of latest e-learning pedagogies and use of appropriate technologies To become a National Industrial Training Institute, having global vision and a human perspective. To uphold a framework of basic cultural, social and behavioral principles and values, that nurture human communities and to further help achieve a sustainable development in the fields of economics, science and technology, social sciences and humanities.
</string>
    <string name="home">We are a Hub of experienced industry experts sharing knowledge and technology in the form of training,internship and development. We are providing the solution of corporate and universities problems related to project and product. You can feel the real practical learning with our experts in the field of manufacturing, design and software development.</string>
    <string name="welcome">Welcome To DVS Industrial Hub Technology Pvt Ltd</string>
    <string name="flutter">Flutter is an open-source UI software development kit created by Google. It is used to develop applications for Android, iOS, Windows, Mac, Linux, Google Fuchsia and the web from a single codebase. The first version of Flutter was known as codename "Sky" and ran on the Android operating system.</string>
    <string name="java">Java Powers Our Digital World. Java is at the heart of our digital lifestyle. Its the platform for launching careers, exploring human-to-digital interfaces, architecting the worlds best applications. Java is a general-purpose programming language that is class-based, object-oriented, and designed to have as few implementation dependencies as possible.</string>
    <string name="Android">Android is a mobile operating system developed by Google. It is used by several smartphones and tablets. Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is the world most popular used mobile platform with market share of over 80%.</string>
    <string name="Php">The PHP Hypertext Preprocessor (PHP) is a programming language that allows web developers to create dynamic content that interacts with databases. PHP is basically used for developing web-based software applications. This tutorial helps you to build your base with PHP. PHP is a MUST for students and working professionals to become a great Software Engineer specially when they are working in Web Development Domain.
</string>
    <string name="React">React is an open-source JavaScript library for building user interfaces. It is maintained by Facebook and a community of individual developers and companies. React can be used as a base in the development of single-page or mobile applications. React can also render on the server using Node and power mobile apps using React Native.</string>
    <string name="Angular">Angular is a TypeScript-based open-source web application framework led by the Angular Team at Google and by a community of individuals and corporations. Angular is a complete rewrite from the same team that built AngularJS. Angular is a platform for building mobile and desktop web applications. Angular is currently most widely used and popular framework.</string>
    <string name="Nodejs">Node.js is an open-source, cross-platform, JavaScript runtime environment that executes JavaScript code outside a web browser. Node.js® is a JavaScript runtime built on Chromes V8 JavaScript engine. As an asynchronous event-driven JavaScript runtime, Node.js is designed to build scalable network applications.</string>
    <string name="Ios">iOS is a mobile operating system created and developed by Apple Inc. exclusively for its hardware. It is the operating system that powers many of the companys mobile devices, including the iPhone and iPod Touch; it also powered the iPad until the introduction of iPadOS in 2019. IOS is one of the most secured and privacy first mobile operating system</string>
    <string name="Python">Python is an easy to learn, powerful programming language. It has efficient high-level data structures and a simple but effective approach to object-oriented programming. Python’s elegant syntax and dynamic typing, together with its interpreted nature, make it an ideal language for scripting and rapid application development in many areas on most platforms. As of Now, Python is the most popular Programming Language!</string>
    <string name="Datascience">“Data Is the New Oil” Says Mukesh Ambani and The World. Data science is an inter-disciplinary field that uses scientific methods, processes, algorithms and systems to extract knowledge and insights from many structural and unstructured data. Data science is related to data mining, deep learning and big data.</string>
    <string name="Dotnet">.NET is a free, cross-platform, open source developer platform for building many different types of applications. NET Framework is a software framework developed by Microsoft that runs primarily on Microsoft Windows. It includes a large class library called Framework Class Library and provides language interoperability across several programming languages.</string>
    <string name="Deeplearning">Deep learning is part of a broader family of machine learning methods based on artificial neural networks with representation learning. Learning can be supervised, semi-supervised or unsupervised. Deep learning is a subset of machine learning in artificial intelligence (AI) that has networks capable of learning unsupervised from data that is unstructured or unlabeled. Also known as deep neural learning or deep neural network.</string>
    <string name="Seo">Search engine optimization is the process of growing the quality and quantity of website traffic by increasing the visibility of a website or a web page to users of a web search engine. SEO refers to the improvement of unpaid results and excludes direct traffic and the purchase of paid placement. SEO stands for Search Engine Optimization, which is the practice of increasing the quantity and quality of traffic to your website through organic search engine results.</string>
    <string name="Ai">Artificial intelligence (AI) is wide-ranging branch of computer science concerned with building smart machines capable of performing tasks that typically require human intelligence. AI is an interdisciplinary science with multiple approaches, but advancements in machine learning and deep learning are creating a paradigm shift in virtually every sector of the tech industry. Google CEO Sundar Pichai said that AI is the main tool behind new-age innovation and discoveries like driverless cars or disease detecting algorithm.</string>
    <string name="Bigdata">Big data is a field that treats ways to analyze, systematically extract information from, or otherwise deal with data sets that are too large or complex to be dealt with by traditional data-processing application software. Apache Hadoop is a collection of open-source software utilities that facilitate using a network of many computers to solve problems involving massive amounts of data and computation. It provides a software framework for distributed storage and processing of big data using the MapReduce programming model. </string>
    <string name="Iot">The Internet of things is a system of interrelated computing devices, mechanical and digital machines provided with unique identifiers and the ability to transfer data over a network without requiring human-to-human or human-to-computer interaction. It’s the future of a more interconnected world.</string>
    <string name="Cybersecurity">Cyber security is the practice of defending computers, servers, mobile devices, electronic systems, networks, and data from malicious attacks. Its also known as information technology security or electronic information security. Information Security, Data Security, Cloud Security, Application Security, End-User Privacy are some broad fields of Cyber Security.</string>
    <string name="Meanstack">MEAN is a free and open-source JavaScript software stack for building dynamic web sites and web applications. Because all components of the MEAN stack support programs that are written in JavaScript, MEAN applications can be written in one language for both server-side and client-side execution environments. MEAN (MongoDB, ExpressJS, AngularJS (or Angular), and NodeJS) is a free and open-source JavaScript software stack for building dynamic web sites and web applications.</string>
    <string name="Ionic">Ionic is a complete open-source SDK for hybrid mobile app development created by Max Lynch, Ben Sperry, and Adam Bradley of Drifty Co. in 2013. The original version was released in 2013 and built on top of AngularJS and Apache Cordova. Ionic Framework is an open source mobile UI toolkit for building high quality, cross-platform native and web app experiences. Move faster with a single codebase, running everywhere.</string>
    <string name="Salesforce">Salesforce.com, inc. is an American cloud-based software company headquartered in San Francisco, California. It provides customer relationship management service and also sells a complementary suite of enterprise applications focused on customer service, marketing automation, analytics, and application development.</string>
</resources>