<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/hom"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ourtechnologies"
            android:icon="@drawable/technew"
            android:title="@string/menu_ourtechnologies" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/galle"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutnew"
            android:title="@string/menu_aboutus" />

        <item
            android:id="@+id/nav_ourteam"
            android:icon="@drawable/ourteam"
            android:title="@string/menu_ourteam" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/services"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/contactnew"
            android:title="@string/menu_contactus" />

        <item
            android:id="@+id/nav_enquiry"
            android:icon="@drawable/enquirynew"
            android:title="@string/menu_enquiry" />

    </group>
</menu>