<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dvsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.dvsapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ourtechnologies"
        android:name="com.example.dvsapp.ui.ourtechnologies.OurtechnologiesFragment"
        android:label="@string/menu_ourtechnologies"
        tools:layout="@layout/fragment_ourtechnlogies" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.dvsapp.Aboutus"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_ourteam"
        android:name="com.example.dvsapp.Ourteam"
        android:label="@string/menu_ourteam"
        tools:layout="@layout/fragment_ourteam" />
    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.dvsapp.Services"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.dvsapp.contactus"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_enquiry"
        android:name="com.example.dvsapp.Enquiry"
        android:label="@string/menu_enquiry"
        tools:layout="@layout/fragment_enquiry" />
</navigation>